--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -3,7 +3,7 @@ body {
 	padding: 0;
 	font-family: "Manrope", sans-serif;
 	height: 100vh;
-	background-color: #f3eee8;
+	background-color: #1e212b;
 }
 
 .container {
@@ -26,36 +26,83 @@ body {
 	justify-content: end;
 	width: 100%;
 	height: 120px;
-	background-color: white;
+	background-color: #edfff0;
 	border-radius: 10px;
 	margin: 25px 0;
 	border: none;
-	box-shadow: inset 0px 0px 10px rgb(0, 0, 0, 0.06);
+	box-shadow: inset 0px 0px 10px rgb(0, 0, 0, 0.12);
 }
 
 .display {
-  padding-right: 10px;
-  font-family: "Manrope", sans-serif;
-  font-size: 3rem;
+	padding-right: 10px;
+	font-family: "Manrope", sans-serif;
+	font-size: 3rem;
+	color: #1e212b;
 }
 
 .row {
 	display: flex;
+	gap: 8px;
+}
+
+.last-row {
+	display: grid;
+	grid-template-columns: 1fr 1fr 1fr 1fr;
+	gap: 8px;
+}
+
+.zero {
+	grid-column: span 2;
 }
 
 .btn {
 	width: 100%;
-	margin: 5px;
+	margin: 5px 0;
 	padding: 15px;
 	font-family: "Manrope", sans-serif;
-	font-size: 1.5rem;
-	font-weight: 400;
+	font-size: 1.7rem;
+	font-weight: 500;
 	border: none;
 	border-radius: 10px;
+	cursor: pointer;
+	background-color: #edfff0;
+	box-shadow: inset 0px 0px 20px rgb(0, 0, 0, 0.09);
+	color: #1e212b;
 }
 
+.btn:hover {
+	background-color: rgba(221, 237, 216, 0.73);
+	transition: 0.5s;
+}
 
-hr{
-  border: solid 1px black;
-width: 15px;
+.backspace,
+.clear-all,
+.modulas {
+	background-color: #bfdeb4;
+}
+
+.backspace:hover,
+.clear-all:hover,
+.modulas:hover {
+	background-color: rgb(173, 220, 155);
+}
+
+img {
+	width: 40%;
+}
+
+.operator {
+	background-color: #4b7836;
+	color: white;
+	font-size: 1.5rem;
+}
+
+.operator:hover {
+	background-color: #3a5b29;
+	transition: 0.5s;
+}
+
+hr {
+	border: solid 1.5px white;
+	width: 15px;
 }
